--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="passenger_button_min_width">120dp</dimen>
+    <dimen name="passenger_button_corner_radius">12dp</dimen>
+    <dimen name="passenger_item_margin">1dp</dimen>
 </resources>
