--- a/app/src/main/res/layout/fragment_add_passenger.xml
+++ b/app/src/main/res/layout/fragment_add_passenger.xml
@@ -93,8 +93,9 @@
 
             <ImageView
                 android:id="@+id/btnBack"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerInside"
                 android:layout_marginStart="31dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
@@ -107,9 +108,9 @@
                 android:id="@+id/tvCityDeparture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="Новосибирск"
+                android:text="Москва"
                 android:textColor="@color/white"
                 android:textSize="16sp"
 
