--- a/app/src/main/res/layout/fragment_buy_ticket_airoport.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket_airoport.xml
@@ -62,14 +62,13 @@
             android:layout_height="match_parent">
 
 
-
             <TextView
                 android:id="@+id/tvTabloHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="Онлайн табло"
+                android:text="Купить билеты"
                 android:textColor="@color/white"
                 android:textSize="29sp"
                 app:layout_constraintEnd_toEndOf="parent"
