--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -120,8 +120,9 @@
 
             <ImageView
                 android:id="@+id/btnBack"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerInside"
                 android:layout_marginStart="31dp"
                 android:layout_marginTop="10dp"
                 android:src="@drawable/ic_back_white"
@@ -134,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="Новосибирск"
+                android:text="Москва"
                 android:textColor="@color/white"
                 android:textSize="16sp"
 
