--- a/app/src/main/res/layout/fragment_private_info.xml
+++ b/app/src/main/res/layout/fragment_private_info.xml
@@ -69,8 +69,9 @@
 
             <ImageView
                 android:id="@+id/btnBack"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerInside"
                 android:layout_marginStart="31dp"
                 android:layout_marginTop="10dp"
                 android:src="@drawable/ic_back_white"
@@ -81,7 +82,7 @@
                 android:id="@+id/tvSettingsTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="Настройки"
@@ -374,70 +375,7 @@
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/tvAccountsTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:text="Привязка профилей"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/ivGooglePrivate"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_google" />
-
-                    <ImageView
-                        android:id="@+id/ivApplePrivate"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="10dp"
-                        android:src="@drawable/ic_apple" />
-
-                    <ImageView
-                        android:id="@+id/ivVkPrivate"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="10dp"
-                        android:src="@drawable/ic_vk" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/tvAccountsSelectTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:text="Уже привязаны"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/ivTgPrivate"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/ic_tg" />
-
-
-                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tvPrefersTitle"
@@ -511,51 +449,61 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/tIChangePasswordFirst"
+                    android:id="@+id/tilChangePasswordFirst"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginBottom="10dp"
-                    app:boxBackgroundMode="none"
-                    app:boxCollapsedPaddingTop="2dp"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
+                    android:layout_marginTop="16dp"
+                    app:passwordToggleEnabled="true"
+                    app:endIconMode="password_toggle"
+                    app:hintEnabled="false"
+                    app:boxBackgroundColor="@android:color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edChangePasswordFirst"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_input_radius"
-                        android:fontFamily="@font/inter_v"
-                        android:hint=""
-                        android:inputType="text|textPassword"
-                        android:textColor="@color/black"
-                        android:textColorHint="#555555"
-                        android:textSize="16sp" />
+                        android:layout_height="wrap_content"
+                        android:hint="Введите пароль"
+                        android:inputType="textPassword"
+                        android:background="@drawable/text_input_radius_blue"
+                        android:padding="12dp"
+                        android:paddingEnd="48dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/tIChangePasswordSecond"
+                    android:id="@+id/tilChangePasswordSecond"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    app:boxBackgroundMode="none"
-                    app:boxCollapsedPaddingTop="2dp"
-                    app:hintAnimationEnabled="false"
-                    app:hintEnabled="false">
+                    android:layout_marginTop="8dp"
+                    app:passwordToggleEnabled="true"
+                    app:endIconMode="password_toggle"
+                    app:endIconDrawable="@drawable/ic_visibility_toggle"
+                    app:hintEnabled="false"
+                    app:boxBackgroundColor="@android:color/transparent"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edChangePasswordSecond"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_input_radius"
-                        android:fontFamily="@font/inter_v"
-                        android:hint=""
-                        android:inputType="text|textPassword"
-                        android:textColor="@color/black"
-                        android:textColorHint="#555555"
-                        android:textSize="16sp" />
+                        android:layout_height="wrap_content"
+                        android:hint="Повторите пароль"
+                        android:inputType="textPassword"
+                        android:background="@drawable/text_input_radius_blue"
+                        android:padding="12dp" />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btnChangePass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Изменить пароль"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/tilChangePasswordSecond"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
 
                 <TextView
