--- a/app/src/main/res/layout/fragment_promt_login.xml
+++ b/app/src/main/res/layout/fragment_promt_login.xml
@@ -60,8 +60,9 @@
 
             <ImageView
                 android:id="@+id/ivBack"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="centerInside"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintStart_toStartOf="parent"
