--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,12 @@
         />
 
     <item
+        android:id="@+id/buy_tickets"
+        android:icon="@drawable/ic_buy_ticket"
+        android:title="Купить"
+        />
+
+    <item
         android:id="@+id/profil_info"
         android:icon="@drawable/ic_profile_menu"
         android:title="Профиль" />
@@ -20,6 +26,6 @@
     <item
         android:id="@+id/airoport_list"
         android:icon="@drawable/ic_home_menu"
-        android:title="Домой" />
+        android:title="Табло" />
 
 </menu>
